# ai-scientist-multi-agent-verification

./: AI_Scientist_Project_Proposal copy.md  CHEAT_SHEET.md  FINAL_DEMO_PROCEDURE.md  PHASE_1_RESEARCH_BLUEPRINT.md  README.md  app.py  pyproject.toml
data/: all_domains_corpus.json  final_benchmark_claims.json  final_demo_corpus.json  ingested_corpus.json  sample_corpus.json
demo_pdf_uploads/: README.md
demo_uploads/: README.md
docs/: FINAL_DEFENSE_QA.md  FINAL_SUBMISSION_CHECKLIST.md  LLM_UPGRADE_PLAN.md  PHASE_10_LITERATURE_FETCHING.md  PHASE_11_STRUCTURED_CLAIMS.md  PHASE_12_ITERATIVE_CRITIC_LOOP.md  PHASE_13_VERIFICATION_IMPROVEMENT.md  PHASE_14_ABLATION_STUDIES.md  PHASE_15_BENCHMARK_EXPANSION.md  PHASE_16_FAILURE_ANALYSIS.md  PHASE_17_LIVE_CORPUS_AND_CONTRADICTIONS.md  PHASE_18_THESIS_ASSETS.md  PHASE_18_THESIS_EXPORTS.md  PHASE_19_STREAMLIT_UI.md  PHASE_2_IMPLEMENTATION_PLAN.md  PHASE_3_BASELINES_AND_EVALUATION.md  PHASE_4_MVP_AGENT_PIPELINE.md  PHASE_5_CRITIC_AND_ITERATION.md  PHASE_6_EXPERIMENTS.md  PHASE_7_THESIS_AND_DEMO.md  PHASE_8_CORPUS_INGESTION.md  PHASE_9_EXPERIMENT_RUNNER.md  PROJECT_OWNERSHIP.md  UI_OWNERSHIP.md
scripts/: analyze_failures.py  build_corpus.py  build_demo_uploads.py  build_real_corpus.py  demo_day_run.ps1  export_thesis_assets.py  fetch_papers.py  generate_demo_html.py  generate_thesis_assets.py  run_demo.py  run_experiments.py
tests/: test_benchmark_metadata.py  test_demo_assets.py  test_experiment_runner.py  test_failure_analysis.py  test_ingestion.py  test_literature.py  test_live_experiment_runner.py  test_pipeline.py  (+4 more)
(+347 files in other folders)
