[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-scientist"
version = "0.1.0"
description = "A research-oriented multi-agent framework for claim verification over AI and CS literature."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "openai>=1.86.0",
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.1",
    "pypdf>=5.0.0",
    "streamlit>=1.36.0",
    "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
